--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -24,7 +23,7 @@
 NEPCEMAC TemplateMo
 -->
   </head>
-
+  
   <body>
 
     <!-- ***** Preloader Start ***** -->
@@ -64,6 +63,7 @@ NEPCEMAC TemplateMo
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"><h2>NEPCEMAC</h2></a>
+          <!-- <a class="navbar-brand" href="index.html"><img src = "assets/images/LOGOS/logo_color_noBG.png" style="object-fit: fill;"></a> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -158,7 +158,7 @@ NEPCEMAC TemplateMo
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <!-- <img src="assets/images/service_01.jpg" alt=""> -->
+              <img src="assets/images/service_01.jpg" alt="">
               <div class="down-content">
                 <h4>Waste Segregation Campaigns</h4>
                 <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate people about the benefits of separating biodegradable and non-biodegradable waste</p>
@@ -168,7 +168,7 @@ NEPCEMAC TemplateMo
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <!-- <img src="assets/images/service_02.jpg" alt=""> -->
+              <img src="assets/images/service_02.jpg" alt="">
               <div class="down-content">
                 <h4>Waste collection & transportation awareness</h4>
                 <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the waste management process.</p>
@@ -178,7 +178,7 @@ NEPCEMAC TemplateMo
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <!-- <img src="assets/images/service_03.jpg" alt=""> -->
+              <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Publications</h4>
                 <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform stakeholders, community, as well as minded organizations and service holders regarding environmental issues and waste management.</p>
@@ -188,7 +188,7 @@ NEPCEMAC TemplateMo
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <!-- <img src="assets/images/service_03.jpg" alt=""> -->
+              <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Public Awareness Programs</h4>
                 <p>Programs that aim to educate and raise awareness about solid waste management issues through various methods such as orientations, trainings, mass campaigns, exhibitions, street dramas, songs, poetry, shows, video documentaries and the use of pamphlets.</p>
@@ -198,7 +198,7 @@ NEPCEMAC TemplateMo
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <!-- <img src="assets/images/service_03.jpg" alt=""> -->
+              <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Street Sweeping and River Cleaning</h4>
                 <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection services are delivered.</p>
@@ -208,7 +208,7 @@ NEPCEMAC TemplateMo
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <!-- <img src="assets/images/service_03.jpg" alt=""> -->
+              <img src="assets/images/service_03.jpg" alt="">
               <div class="down-content">
                 <h4>Community Mobilization</h4>
                 <p>Programs that mobilize the community to take active part in improving environmental pollution at the local place.</p>
@@ -469,7 +469,7 @@ NEPCEMAC TemplateMo
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
-          <div class="col-md-3 footer-item last-item">
+          <!-- <div class="col-md-3 footer-item last-item">
             <h4>Contact Us</h4>
             <div class="contact-form">
               <form id="contact footer-contact" action="" method="post">
@@ -497,7 +497,7 @@ NEPCEMAC TemplateMo
                 </div>
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </footer>
