--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="TemplateMo">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
-    rel="stylesheet">
+  <meta name="author" content="NEPCEMAC">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
+    rel="stylesheet"> -->
   <link rel="icon" type="image/png" href="./assets/images/LOGOS/logo_color_bg.png" />
 
   <title>NEPCEMAC</title>
@@ -19,11 +19,11 @@
 
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="assets/css/fontawesome.css">
-  <link rel="stylesheet" href="assets/css/templatemo-finance-business.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/owl.css">
   <!--
 
-NEPCEMAC TemplateMo
+NEPCEMAC 
 -->
 </head>
 
@@ -38,6 +38,10 @@ NEPCEMAC TemplateMo
   </div>
   <!-- ***** Preloader End ***** -->
 
+  <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
   <!-- Header -->
   <div class="sub-header">
     <div class="container">
@@ -51,10 +55,8 @@ NEPCEMAC TemplateMo
         </div>
         <div class="col-md-4">
           <ul class="right-icons">
-            <li><a href="https://www.facebook.com/NEPCEMAC1"><i class="fa fa-facebook"></i></a></li>
-            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
+            <li><a href="https://www.facebook.com/nepcemac.lalitpur"><i class="fa fa-facebook"></i></a></li>
+            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
           </ul>
         </div>
       </div>
@@ -152,7 +154,8 @@ NEPCEMAC TemplateMo
           <span>Mauris ut dapibus velit cras interdum nisl ac urna tempor mollis.</span>
         </div>
         <div class="col-md-4">
-          <a href="#contactus" class="border-button">Request callback</a>
+          <a href="https://tawk.to/chat/600c5495c31c9117cb71bab4/1eso2kqh7" target="_blank"
+            class="border-button">Request callback</a>
         </div>
       </div>
     </div>
@@ -414,44 +417,6 @@ NEPCEMAC TemplateMo
 
 
         </div>
-
-
-        <!-- <div class="col-md-12">
-          <div class="contact-form">
-            <form id="contact" action="" method="post">
-              <div class="row">
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="email" type="text" class="form-control" id="email" pattern="[^ @]*@[^ @]*"
-                      placeholder="E-Mail Address" required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                  <fieldset>
-                    <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject"
-                      required="">
-                  </fieldset>
-                </div>
-                <div class="col-lg-12">
-                  <fieldset>
-                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message"
-                      required=""></textarea>
-                  </fieldset>
-                </div>
-                <div class="col-lg-12">
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="border-button">Send Message</button>
-                  </fieldset>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div> -->
       </div>
     </div>
   </div>
@@ -498,6 +463,45 @@ NEPCEMAC TemplateMo
                 alt="Solid Waste Management Association of Nepal">
             </div>
 
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/Emblem_of_Nepal.svg" title="Nepal Government" alt="Nepal Government">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/NHRC.png" title="Nepal Health Research Council (NHRC)"
+                alt="Nepal Health Research Council (NHRC)">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/German-Embassy_format.png" title="German Embassy of Nepal"
+                alt="German Embassy of Nepal">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/japan_embassy_format.png" title="Japanese Embassy of Nepal"
+                alt="Japanese Embassy of Nepal">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/amici_dei_bambini_format.png" title="Amici Dei Bambini"
+                alt="Amici Dei Bambini">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/giz.jpg" title="Deutsche Gesellschaft für Internationale Zusammenarbeit"
+                alt="Deutsche Gesellschaft für Internationale Zusammenarbeit">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/CIUD.jpg" title="Centre for Integrated Urban Development"
+                alt="Centre for Integrated Urban Development">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/NTNC.jpg" title="National Trust For Nature Conservation"
+                alt="National Trust For Nature Conservation">
+            </div>
+
           </div>
         </div>
       </div>
@@ -513,10 +517,8 @@ NEPCEMAC TemplateMo
           <h4>NEPCEMAC</h4>
           <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
           <ul class="social-icons">
-            <li><a href="https://www.facebook.com/NEPCEMAC1" target="_blank"><i class="fa fa-facebook"></i></a></li>
-            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li> -->
+            <li><a href="https://www.facebook.com/nepcemac.lalitpur" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
           </ul>
         </div>
         <div class="col-md-3 footer-item">
@@ -539,8 +541,8 @@ NEPCEMAC TemplateMo
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
-        <!-- <div class="col-md-3 footer-item last-item">
-            <h4>Contact Us</h4>
+        <div class="col-md-3 footer-item last-item">
+            <!-- <h4>Contact Us</h4>
             <div class="contact-form">
               <form id="contact footer-contact" action="" method="post">
                 <div class="row">
@@ -566,8 +568,8 @@ NEPCEMAC TemplateMo
                   </div>
                 </div>
               </form>
-            </div>
-          </div> -->
+            </div> -->
+          </div>
       </div>
     </div>
   </footer>
@@ -594,6 +596,7 @@ NEPCEMAC TemplateMo
   <script src="assets/js/owl.js"></script>
   <script src="assets/js/slick.js"></script>
   <script src="assets/js/accordions.js"></script>
+  <script src="assets/js/back-top.js"></script>
   <script>
     $(function () {
       // Single Page Nav
@@ -620,6 +623,19 @@ NEPCEMAC TemplateMo
     }
   </script>
 
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/600c5495c31c9117cb71bab4/1eso2kqh7';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 
 </html>
