added dummy background images and html css changes respectively

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -193,7 +193,7 @@ NEPCEMAC
         </div>
         <div class="col-md-4">
           <div class="service-item">
-            <img src="assets/images/service_01.jpg" alt="">
+            <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
               <h4>Waste Segregation Campaigns</h4>
               <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate
@@ -204,7 +204,7 @@ NEPCEMAC
         </div>
         <div class="col-md-4">
           <div class="service-item">
-            <img src="assets/images/service_02.jpg" alt="">
+            <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
               <h4>Waste collection & transportation awareness</h4>
               <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the
@@ -215,7 +215,7 @@ NEPCEMAC
         </div>
         <div class="col-md-4">
           <div class="service-item">
-            <img src="assets/images/service_03.jpg" alt="">
+            <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
               <h4>Publications</h4>
               <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform
@@ -227,7 +227,7 @@ NEPCEMAC
         </div>
         <div class="col-md-4">
           <div class="service-item">
-            <img src="assets/images/service_03.jpg" alt="">
+            <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
               <h4>Public Awareness Programs</h4>
               <p>Programs that aim to educate and raise awareness about solid waste management issues through various
@@ -239,7 +239,7 @@ NEPCEMAC
         </div>
         <div class="col-md-4">
           <div class="service-item">
-            <img src="assets/images/service_03.jpg" alt="">
+            <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
               <h4>Street Sweeping and River Cleaning</h4>
               <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection
@@ -250,7 +250,7 @@ NEPCEMAC
         </div>
         <div class="col-md-4">
           <div class="service-item">
-            <img src="assets/images/service_03.jpg" alt="">
+            <img src="assets/images/scroll/1.png" alt="">
             <div class="down-content">
               <h4>Community Mobilization</h4>
               <p>Programs that mobilize the community to take active part in improving environmental pollution at the
