--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -21,10 +21,7 @@
   <link rel="stylesheet" href="assets/css/fontawesome.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/owl.css">
-  <!--
-
-NEPCEMAC 
--->
+  <!-- NEPCEMAC -->
   <script src="https://www.youtube.com/iframe_api"></script>
   <script>
     function onYouTubeIframeAPIReady() {
@@ -59,7 +56,7 @@ NEPCEMAC
   </div>
   <!-- ***** Preloader End ***** -->
 
-  <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top">
+  <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top" style="z-index: 99;">
     <i class="bi bi-arrow-up"></i>
   </button>
 
@@ -110,6 +107,9 @@ NEPCEMAC
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contactus">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#our_circle">Our Circle <i class="fa fa-angle-down" aria-hidden="true"></i></a>
             </li>
           </ul>
         </div>
@@ -317,7 +317,8 @@ NEPCEMAC
           <div class="more-info-content">
             <div class="row">
               <div class="col-md-7" style="display: flex">
-                <div id="video-light" class="video-box align-self-center" style="width: 100%; height: 90%; border-radius: 20px;"></div>
+                <div id="video-light" class="video-box align-self-center"
+                  style="width: 100%; height: 90%; border-radius: 20px;"></div>
                 <!-- <div class="left-image">
                   <img src="assets/images/more-info.jpg" alt="">
                 </div> -->
@@ -436,8 +437,6 @@ NEPCEMAC
               marginwidth="0"
               src="https://maps.google.com/maps?width=100%25&amp;height=350px&amp;hl=en&amp;q=27.678505223000013,%2085.30366240798527+(NEPCEMAC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
                 href="https://www.gps.ie/"></a></iframe></div>
-
-
         </div>
       </div>
     </div>
@@ -454,13 +453,13 @@ NEPCEMAC
           <div class="owl-partners owl-carousel">
 
             <div class="partner-item">
-              <img src="assets/images/LOGOS/nepsemyak.png" title="Nepsemyak Sewa Pvt. Ltd."
-                alt="Nepsemyak Sewa Pvt. Ltd.">
+              <img src="assets/images/LOGOS/amici_dei_bambini_format.png" title="Amici Dei Bambini"
+                alt="Amici Dei Bambini">
             </div>
 
             <div class="partner-item">
-              <img src="assets/images/LOGOS/pariwartan_black.png" title="Pariwartan Sewa Pvt. Ltd."
-                alt="Pariwartan Sewa Pvt. Ltd.">
+              <img src="assets/images/LOGOS/japan_embassy_format.png" title="Japanese Embassy of Nepal"
+                alt="Japanese Embassy of Nepal">
             </div>
 
             <div class="partner-item">
@@ -468,7 +467,17 @@ NEPCEMAC
             </div>
 
             <div class="partner-item">
+              <img src="assets/images/LOGOS/NTNC.png" title="National Trust For Nature Conservation"
+                alt="National Trust For Nature Conservation">
+            </div>
+
+            <div class="partner-item">
               <img src="assets/images/LOGOS/swastha_samaj_colored.png" title="Swastha Samaj" alt="Swastha Samaj">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/CIUD.png" title="Centre for Integrated Urban Development"
+                alt="Centre for Integrated Urban Development">
             </div>
 
             <div class="partner-item">
@@ -477,7 +486,13 @@ NEPCEMAC
             </div>
 
             <div class="partner-item">
-              <img src="assets/images/LOGOS/EP.png" title="Everest EcoPolymers" alt="Everest EcoPolymers">
+              <img src="assets/images/LOGOS/nepsemyak.png" title="Nepsemyak Sewa Pvt. Ltd."
+                alt="Nepsemyak Sewa Pvt. Ltd.">
+            </div>
+
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/German-Embassy_format.png" title="German Embassy of Nepal"
+                alt="German Embassy of Nepal">
             </div>
 
             <div class="partner-item">
@@ -488,41 +503,30 @@ NEPCEMAC
             <div class="partner-item">
               <img src="assets/images/LOGOS/Emblem_of_Nepal.svg" title="Nepal Government" alt="Nepal Government">
             </div>
+            <div class="partner-item">
+              <img src="assets/images/LOGOS/pariwartan_black.png" title="Pariwartan Sewa Pvt. Ltd."
+                alt="Pariwartan Sewa Pvt. Ltd.">
+            </div>
+
 
             <div class="partner-item">
               <img src="assets/images/LOGOS/NHRC.png" title="Nepal Health Research Council (NHRC)"
                 alt="Nepal Health Research Council (NHRC)">
             </div>
 
-            <div class="partner-item">
-              <img src="assets/images/LOGOS/German-Embassy_format.png" title="German Embassy of Nepal"
-                alt="German Embassy of Nepal">
-            </div>
-
-            <div class="partner-item">
-              <img src="assets/images/LOGOS/japan_embassy_format.png" title="Japanese Embassy of Nepal"
-                alt="Japanese Embassy of Nepal">
-            </div>
-
-            <div class="partner-item">
-              <img src="assets/images/LOGOS/amici_dei_bambini_format.png" title="Amici Dei Bambini"
-                alt="Amici Dei Bambini">
-            </div>
 
             <div class="partner-item">
               <img src="assets/images/LOGOS/giz.png" title="Deutsche Gesellschaft für Internationale Zusammenarbeit"
                 alt="Deutsche Gesellschaft für Internationale Zusammenarbeit">
             </div>
 
-            <div class="partner-item">
-              <img src="assets/images/LOGOS/CIUD.png" title="Centre for Integrated Urban Development"
-                alt="Centre for Integrated Urban Development">
-            </div>
+
 
             <div class="partner-item">
-              <img src="assets/images/LOGOS/NTNC.png" title="National Trust For Nature Conservation"
-                alt="National Trust For Nature Conservation">
+              <img src="assets/images/LOGOS/EP.png" title="Everest EcoPolymers" alt="Everest EcoPolymers">
+
             </div>
+
 
           </div>
         </div>
@@ -535,7 +539,7 @@ NEPCEMAC
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-3 footer-item">
+        <div class="col-md-4 footer-item">
           <h4>NEPCEMAC</h4>
           <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
           <ul class="social-icons">
@@ -545,13 +549,13 @@ NEPCEMAC
           </ul>
         </div>
         <div class="col-md-3 footer-item">
-          <h4>Useful Links</h4>
+          <h4>Download Materials</h4>
           <ul class="menu-list">
-            <li><a href="#">Vivamus ut tellus mi</a></li>
-            <li><a href="#">Nulla nec cursus elit</a></li>
-            <li><a href="#">Vulputate sed nec</a></li>
-            <li><a href="#">Cursus augue hasellus</a></li>
-            <li><a href="#">Lacinia ac sapien</a></li>
+            <li><a href="#">Newsletter</a></li>
+            <li><a href="#">Composting Manuals</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="#"> Manure</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="#"> EM, Bokasi</a></li>
+            <li>  <i class="fa fa-angle-double-right"></i><a href="#"> Vermi</a></li>
           </ul>
         </div>
         <div class="col-md-3 footer-item">
@@ -564,34 +568,22 @@ NEPCEMAC
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
-        <div class="col-md-3 footer-item last-item">
-          <!-- <h4>Contact Us</h4>
-            <div class="contact-form">
-              <form id="contact footer-contact" action="" method="post">
-                <div class="row">
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12 col-md-12 col-sm-12">
-                    <fieldset>
-                      <input name="email" type="text" class="form-control" id="email" pattern="[^ @]*@[^ @]*" placeholder="E-Mail Address" required="">
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-lg-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="filled-button">Send Message</button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
-            </div> -->
+        <div class="col-md-2 footer-item last-item" id="our_circle">
+          <h4>Our Circle</h4>
+          <div class="cards">
+            <div class="card green">
+              <p class="tip">Nepsemyak</p>
+            </div>
+            <div class="card green">
+              <p class="tip">Pariwartan</p>
+            </div>
+            <div class="card green">
+              <p class="tip">Green City</p>
+            </div>
+            <div class="card green">
+              <p class="tip">Swastha Samaj</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
