changed the activities and about us

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -100,10 +100,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Our Activities</a>
+              <a class="nav-link" href="#about">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About Us</a>
+              <a class="nav-link" href="#services">Our Activities</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contactus">Contact Us</a>
@@ -177,6 +177,86 @@
         <div class="col-md-4">
           <a href="https://tawk.to/chat/600c5495c31c9117cb71bab4/1eso2kqh7" target="_blank"
             class="border-button">Request callback</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="more-info" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="more-info-content">
+            <div class="row">
+              <div class="col-md-7" style="display: flex">
+                <div id="video-light" class="video-box align-self-center"
+                  style="width: 100%; height: 90%; border-radius: 20px;"></div>
+                <!-- <div class="left-image">
+                  <img src="assets/images/more-info.jpg" alt="">
+                </div> -->
+              </div>
+              <div class="col-md-5 align-self-center">
+                <div class="right-content">
+                  <span>Who we are</span>
+                  <h2>Get to know about <em>our organization</em></h2>
+                  <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus
+                    nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at
+                    dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget,
+                    tincidunt</p>
+                  <a href="#" class="filled-button">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="fun-facts">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="left-content">
+            <span>Lorem ipsum dolor sit amet</span>
+            <h2>Our solutions for your <br><em>Solid Waste Management</em></h2>
+            <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus
+              laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue.
+              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut
+              posuere ante tortor ut neque.
+            </p>
+            <a href="" class="filled-button">Read More</a>
+          </div>
+        </div>
+        <div class="col-md-6 align-self-center">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">1997</div>
+                <div class="count-title">Founded</div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">30</div>
+                <div class="count-title">Members</div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">40</div>
+                <div class="count-title">Initiatives</div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">9</div>
+                <div class="count-title">Funds collected</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -256,84 +336,6 @@
               <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                 local place.</p>
               <!-- <a href="" class="filled-button">Read More</a> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="fun-facts">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="left-content">
-            <span>Lorem ipsum dolor sit amet</span>
-            <h2>Our solutions for your <br><em>Solid Waste Management</em></h2>
-            <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus
-              laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue.
-              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut
-              posuere ante tortor ut neque.
-            </p>
-            <a href="" class="filled-button">Read More</a>
-          </div>
-        </div>
-        <div class="col-md-6 align-self-center">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="count-area-content">
-                <div class="count-digit">1997</div>
-                <div class="count-title">Founded</div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="count-area-content">
-                <div class="count-digit">30</div>
-                <div class="count-title">Members</div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="count-area-content">
-                <div class="count-digit">40</div>
-                <div class="count-title">Initiatives</div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="count-area-content">
-                <div class="count-digit">9</div>
-                <div class="count-title">Funds collected</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="more-info" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="more-info-content">
-            <div class="row">
-              <div class="col-md-7" style="display: flex">
-                <div id="video-light" class="video-box align-self-center"
-                  style="width: 100%; height: 90%; border-radius: 20px;"></div>
-                <!-- <div class="left-image">
-                  <img src="assets/images/more-info.jpg" alt="">
-                </div> -->
-              </div>
-              <div class="col-md-5 align-self-center">
-                <div class="right-content">
-                  <span>Who we are</span>
-                  <h2>Get to know about <em>our organization</em></h2>
-                  <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus
-                    nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at
-                    dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget,
-                    tincidunt</p>
-                  <a href="#" class="filled-button">Read More</a>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -534,7 +536,6 @@
     </div>
   </div>
 
-
   <!-- Footer Starts Here -->
   <footer>
     <div class="container">
@@ -594,8 +595,7 @@
       <div class="row">
         <div class="col-md-12">
           <p>2024 NEPCEMAC.
-
-            - Design: <a href="https://asandesh.com.np" target="_blank">Sandesh Acharya</a></p>
+            <!-- - Design: <a href="https://asandesh.com.np" target="_blank">Sandesh Acharya</a></p> -->
         </div>
       </div>
     </div>
