About us heading added after swapping it with activities

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -186,6 +186,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
+          <div class="section-heading">
+            <h2>About <em> NEPCEMAC</em></h2>
+            <span>Information about our organization</span>
+          </div>
           <div class="more-info-content">
             <div class="row">
               <div class="col-md-7" style="display: flex">
@@ -203,7 +207,7 @@
                     nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at
                     dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget,
                     tincidunt</p>
-                  <a href="#" class="filled-button">Read More</a>
+                  <a href="https://www.google.com" class="filled-button">Read More</a>
                 </div>
               </div>
             </div>
