--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -84,10 +84,10 @@
   <header class="">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <!-- <a class="navbar-brand" href="index.html">
           <h2>NEPCEMAC</h2>
-        </a>
-        <!-- <a class="navbar-brand" href="index.html"><img src = "assets/images/LOGOS/logo_color_noBG.png" style="object-fit: fill;"></a> -->
+        </a> -->
+        <a class="navbar-brand" href="index.html"><img src = "assets/images/LOGOS/NEPCEMAC_WHITE_BOARDER.png" style="object-fit: contain;height: 65px;width: auto; margin-top: -18px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
