added two more slides to the heading banner

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -136,7 +136,7 @@
       </div>
       <!-- // Item -->
       <!-- Item -->
-      <!-- <div class="item item-2">
+      <div class="item item-2">
         <div class="img-fill">
           <div class="text-content">
             <h6>nepcemacNEPCEMACnepcemacNEPCEMAC</h6>
@@ -147,10 +147,10 @@
             <a href="services.html" class="filled-button">our services</a>
           </div>
         </div>
-      </div> -->
+      </div>
       <!-- // Item -->
       <!-- Item -->
-      <!-- <div class="item item-3">
+      <div class="item item-3">
         <div class="img-fill">
           <div class="text-content">
             <h6>nepcemacNEPCEMACnepcemacNEPCEMAC</h6>
@@ -161,7 +161,7 @@
             <a href="about.html" class="filled-button">learn more</a>
           </div>
         </div>
-      </div> -->
+      </div>
       <!-- // Item -->
     </div>
   </div>
