changed the our circle part of the page into slide in tabs

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -87,7 +87,8 @@
         <!-- <a class="navbar-brand" href="index.html">
           <h2>NEPCEMAC</h2>
         </a> -->
-        <a class="navbar-brand" href="index.html"><img src = "assets/images/LOGOS/NEPCEMAC_WHITE_BOARDER.png" style="object-fit: contain;height: 65px;width: auto; margin-top: -18px;"></a>
+        <a class="navbar-brand" href="index.html"><img src="assets/images/LOGOS/NEPCEMAC_WHITE_BOARDER.png"
+            style="object-fit: contain;height: 65px;width: auto; margin-top: -18px;"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
           aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -130,7 +131,7 @@
               nepcemanepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACcNEPCEMAC
             </h4>
             <p>nepcemacNEPCEMAC</a> nepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMAC</p>
-            <!-- <a href="#contactus" class="filled-button scrollto">contact us</a> -->
+            <a href="#contactus" class="filled-button scrollto">contact us</a>
           </div>
         </div>
       </div>
@@ -144,7 +145,7 @@
             <p>
               nepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMAC
             </p>
-            <a href="services.html" class="filled-button">our services</a>
+            <a href="#services" class="filled-button">our services</a>
           </div>
         </div>
       </div>
@@ -158,7 +159,7 @@
             <p>
               nepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMACnepcemacNEPCEMAC.
             </p>
-            <a href="about.html" class="filled-button">learn more</a>
+            <a href="#more-info" class="filled-button">learn more</a>
           </div>
         </div>
       </div>
@@ -265,6 +266,42 @@
       </div>
     </div>
   </div>
+
+  <div class="more-info" id="letters">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2>Letter from <em> Chairman</em></h2>
+          </div>
+          <div class="more-info-content">
+            <div class="row">
+              <div class="col-md-7" style="display: flex">
+                <div id="video-light" class="video-box align-self-center"
+                  style="width: 100%; height: 90%; border-radius: 20px;"></div>
+                <!-- <div class="left-image">
+                  <img src="assets/images/more-info.jpg" alt="">
+                </div> -->
+              </div>
+              <div class="col-md-5 align-self-center">
+                <div class="right-content">
+                  <span>Who we are</span>
+                  <h2>Get to know about <em>our organization</em></h2>
+                  <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus
+                    nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at
+                    dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget,
+                    tincidunt</p>
+                  <a href="https://www.google.com" class="filled-button">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
   <div class="services" id="services">
     <div class="container">
@@ -553,7 +590,7 @@
             <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
           </ul>
         </div>
-        <div class="col-md-3 footer-item">
+        <div class="col-md-2 footer-item">
           <h4>Download Materials</h4>
           <ul class="menu-list">
             <li><a href="#">Newsletter</a></li>
@@ -563,7 +600,7 @@
             <li>  <i class="fa fa-angle-double-right"></i><a href="#"> Vermi</a></li>
           </ul>
         </div>
-        <div class="col-md-3 footer-item">
+        <div class="col-md-2 footer-item">
           <h4>Additional Pages</h4>
           <ul class="menu-list">
             <li><a href="#">About Us</a></li>
@@ -573,9 +610,9 @@
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
-        <div class="col-md-2 footer-item last-item" id="our_circle">
+        <div class="col-md-4 footer-item last-item" id="our_circle">
           <h4>Our Circle</h4>
-          <div class="cards">
+          <!-- <div class="cards">
             <div class="card green">
               <p class="tip">Nepsemyak</p>
             </div>
@@ -588,7 +625,41 @@
             <div class="card green">
               <p class="tip">Swastha Samaj</p>
             </div>
+          </div> -->
+          <div class="main_card">
+            <div class="background blob" style="size: 100%;"></div>
+            <div class="cool_card_logo">
+              <p align="center">NEPSEMYAK GROUP</p>
+            </div>
+            <div class="box box1">
+              <a href="#"><span class="icon" style="position:absolute;
+            margin-left:-100px;z-index:20;"> Nepsemyak Sewa </span>
+              <img src="assets/images/LOGOS/nepsemyak.png"
+                style="height: 40px;width: auto;position: absolute;margin-left: -150px;margin-top: -5px;"></a>
+            </div>
+            <div class="box box2">
+              <a href="#"><span class="icon" style="position:absolute;
+            margin-left:-90px;z-index:20;"> Pariwartan Sewa </span>
+              <img src="assets/images/LOGOS/pariwartan_black.png"
+                style="height: 40px;width: auto;position: absolute;margin-left: -140px;margin-top: -5px;"></a>
+            </div>
+            <div class="box box3">
+              <a href="#"><span class="icon" style="position:absolute;
+            margin-left:-50px;z-index:20;"> Green City </span>
+              <img src="assets/images/LOGOS/green_city_green.png"
+                style="height: 40px;width: auto;position: absolute;margin-left: -100px;margin-top: -5px;"></a>
+            </div>
+            <div class="box box4">
+              <a href="#"><span class="icon" style="position:absolute;
+            margin-left:-60px;z-index:20;"> Swastha Samaj</span>
+              <img src="assets/images/LOGOS/swastha_samaj_colored.png"
+                style="height: 50px;width: auto;position: absolute;margin-left: -55px;margin-top: -5px;opacity: 0.2;"></a>
+            </div>
           </div>
+
+
+
+
         </div>
       </div>
     </div>
@@ -598,8 +669,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>2024 NEPCEMAC.
-            <!-- - Design: <a href="https://asandesh.com.np" target="_blank">Sandesh Acharya</a></p> -->
+          <h6 style="color: aliceblue;font-variant: small-caps;font-family: Georgia, 'Times New Roman', Times, serif;">
+            2024 , Nepal Environment Pollution Control and Environment Management Center (NEPCEMAC).</h6>
         </div>
       </div>
     </div>
