added links into my circle

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -632,19 +632,19 @@
               <p align="center">NEPSEMYAK GROUP</p>
             </div>
             <div class="box box1">
-              <a href="#"><span class="icon" style="position:absolute;
+              <a href="https://nepsemyak.com.np"><span class="icon" style="position:absolute;
             margin-left:-100px;z-index:20;"> Nepsemyak Sewa </span>
               <img src="assets/images/LOGOS/nepsemyak.png"
                 style="height: 40px;width: auto;position: absolute;margin-left: -150px;margin-top: -5px;"></a>
             </div>
             <div class="box box2">
-              <a href="#"><span class="icon" style="position:absolute;
+              <a href="https://www.facebook.com/pariwartan.sewa"><span class="icon" style="position:absolute;
             margin-left:-90px;z-index:20;"> Pariwartan Sewa </span>
               <img src="assets/images/LOGOS/pariwartan_black.png"
                 style="height: 40px;width: auto;position: absolute;margin-left: -140px;margin-top: -5px;"></a>
             </div>
             <div class="box box3">
-              <a href="#"><span class="icon" style="position:absolute;
+              <a href="https://www.facebook.com/friends/suggestions/?profile_id=100025109945110"><span class="icon" style="position:absolute;
             margin-left:-50px;z-index:20;"> Green City </span>
               <img src="assets/images/LOGOS/green_city_green.png"
                 style="height: 40px;width: auto;position: absolute;margin-left: -100px;margin-top: -5px;"></a>
