added the links to the cards in our circle

--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -612,20 +612,6 @@
         </div>
         <div class="col-md-4 footer-item last-item" id="our_circle">
           <h4>Our Circle</h4>
-          <!-- <div class="cards">
-            <div class="card green">
-              <p class="tip">Nepsemyak</p>
-            </div>
-            <div class="card green">
-              <p class="tip">Pariwartan</p>
-            </div>
-            <div class="card green">
-              <p class="tip">Green City</p>
-            </div>
-            <div class="card green">
-              <p class="tip">Swastha Samaj</p>
-            </div>
-          </div> -->
           <div class="main_card">
             <div class="background blob" style="size: 100%;"></div>
             <div class="cool_card_logo">
@@ -650,16 +636,12 @@
                 style="height: 40px;width: auto;position: absolute;margin-left: -100px;margin-top: -5px;"></a>
             </div>
             <div class="box box4">
-              <a href="#"><span class="icon" style="position:absolute;
+              <a href="javascript:void(null)"><span class="icon" style="position:absolute;
             margin-left:-60px;z-index:20;"> Swastha Samaj</span>
               <img src="assets/images/LOGOS/swastha_samaj_colored.png"
                 style="height: 50px;width: auto;position: absolute;margin-left: -55px;margin-top: -5px;opacity: 0.2;"></a>
             </div>
           </div>
-
-
-
-
         </div>
       </div>
     </div>
