--- a/templatemo_545_finance_business/index.html
+++ b/templatemo_545_finance_business/index.html
@@ -46,7 +46,6 @@
 </head>
 
 <body>
-  <!-- ***** Preloader Start ***** -->
   <div id="preloader">
     <div class="jumper">
       <div></div>
@@ -54,13 +53,11 @@
       <div></div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
 
   <button type="button" class="btn btn-success btn-floating btn-lg" id="btn-back-to-top" style="z-index: 99;">
     <i class="bi bi-arrow-up"></i>
   </button>
 
-  <!-- Header -->
   <div class="sub-header">
     <div class="container">
       <div class="row">
@@ -104,6 +101,9 @@
               <a class="nav-link" href="#about">About Us</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#ourprojects">Our Projects</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#services">Our Activities</a>
             </li>
             <li class="nav-item">
@@ -118,8 +118,6 @@
     </nav>
   </header>
 
-  <!-- Page Content -->
-  <!-- Banner Starts Here -->
   <div class="main-banner header-text" id="top">
     <div class="Modern-Slider">
       <!-- Item -->
@@ -166,7 +164,6 @@
       <!-- // Item -->
     </div>
   </div>
-  <!-- Banner Ends Here -->
 
   <div class="request-form">
     <div class="container">
@@ -217,8 +214,6 @@
       </div>
     </div>
   </div>
-
-
 
   <div class="fun-facts">
     <div class="container">
@@ -272,36 +267,117 @@
       <div class="row">
         <div class="col-md-12">
           <div class="section-heading">
-            <h2>Letter from <em> Chairman</em></h2>
+            <h2> <em>Letter </em> from</h2>
           </div>
-          <div class="more-info-content">
-            <div class="row">
-              <div class="col-md-7" style="display: flex">
-                <div id="video-light" class="video-box align-self-center"
-                  style="width: 100%; height: 90%; border-radius: 20px;"></div>
-                <!-- <div class="left-image">
-                  <img src="assets/images/more-info.jpg" alt="">
-                </div> -->
+          <ul class="nav nav-pills mb-3 nav-justified" id="pills-tab" role="tablist"
+            style="font-size: 20px;background-color: #d2d2d2; margin-top: -70px;">
+            <li class="nav-item">
+              <a class="nav-link active" id="pills-chairman-tab" data-toggle="pill" href="#pills-home" role="tab"
+                aria-controls="pills-home" aria-selected="true">Chairman</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pills-program_cordinator-tab" data-toggle="pill" href="#pills-profile" role="tab"
+                aria-controls="pills-profile" aria-selected="false">Program Coordinator</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab"
+                aria-controls="pills-contact" aria-selected="false">Contact</a>
+            </li> -->
+          </ul>
+          <div class="tab-content" id="pills-tabContent">
+            <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-chairman-tab">
+              <div class="more-info-content">
+                <div class="row">
+                  <div class="col-md-5" style="display: flex">
+                    <div style="object-fit: contain;display: flex;align-items: center;">
+                      <img src="./assets/images/chairman.jpg" style="height:auto;width: 100%;border-radius: 20px;">
+                    </div>
+                    <!-- <div class="left-image">
+                      <img src="assets/images/more-info.jpg" alt="">
+                    </div> -->
+                  </div>
+                  <div class="col-md-7 align-self-center">
+                    <div class="right-content" style="margin-top:auto;">
+                      <!-- <span>Who we are</span>
+                      <h2>Get to know about <em>our organization</em></h2> -->
+                      <p id="chairman_letter"><br>Dear All,<br>
+                        As the Chairman of NEPCEMAC, I want to highlight here the importance of solid waste management.
+                        This problem significantly affects our surroundings, well-being, and societies, requiring our
+                        joint effort and dedication to eco-friendly resolutions.<br>
+                        NEPCEMAC is dedicated to advocating responsible waste management practices. We must raise
+                        awareness about the harmful impacts of improper waste disposal, including pollution, emissions,
+                        and resource depletion.<br>
+                        Our focus is on promoting waste reduction and recycling programs to minimize landfill waste.
+                        This requires community education, partnerships, and innovative practices.<br>
+                        Together, we can be the promoter for change, raising environmentally responsible behavior and
+                        urging governments to prioritize waste management.<br>
+                        I urge each of you to take personal responsibility for our daily waste practices. Let's create a
+                        cleaner, healthier environment for present and future generations.<br>
+                        Thank you for your support.<br><br>
+                        <b>Tika Ram Dahal<br>
+                          Chairman, NEPCEMAC</b>
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col-md-5 align-self-center">
-                <div class="right-content">
-                  <span>Who we are</span>
-                  <h2>Get to know about <em>our organization</em></h2>
-                  <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus
-                    nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at
-                    dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget,
-                    tincidunt</p>
-                  <a href="https://www.google.com" class="filled-button">Read More</a>
+
+
+
+            </div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+              aria-labelledby="pills-program_cordinator-tab">
+
+
+              <div class="more-info-content">
+                <div class="row">
+                  <div class="col-md-5" style="display: flex">
+                    <div style="object-fit: contain;display: flex;align-items: center;">
+                      <img src="./assets/images/program_coordinator.png"
+                        style="height:auto;width: 100%;border-radius: 20px;">
+                    </div>
+                    <!-- <div class="left-image">
+                      <img src="assets/images/more-info.jpg" alt="">
+                    </div> -->
+                  </div>
+                  <div class="col-md-7 align-self-center">
+                    <div class="right-content" style="margin-top:auto;">
+                      <!-- <span>Who we are</span>
+                      <h2>Get to know about <em>our organization</em></h2> -->
+                      <p id="chairman_letter"><br>Dear All,<br>
+                        As the Program Coordinator of NEPCEMAC, I am honored to address those who value the environment
+                        and the Nepali urban community. Our organization is dedicated to promoting sustainable waste
+                        management practices.<br>
+                        Improper waste disposal has a significant impact on community health and the environment. It
+                        pollutes the air, water, and soil, endangering both humans and wildlife. It also contributes to
+                        climate change through greenhouse gas emissions.<br>
+                        For over two decades, NEPCEMAC has been working tirelessly to implement innovative solutions. We
+                        collaborate with local authorities and communities to establish waste management systems that
+                        prioritize waste reduction, reuse, and recycling. Our efforts also include awareness campaigns
+                        and education programs to foster behavioral change and encourage eco-friendly practices.<br>
+                        I urge each one of you to take an active role in promoting sustainable waste management in your
+                        homes and workplaces. Let's embrace the principles of "reduce, reuse, and recycle" to create a
+                        cleaner, healthier, and more sustainable future for ourselves and future generations.<br>
+                        Thank you.<br><br><b>
+                          Laxmi Prasad Ghimire<br>
+                          Program Coordinator, NEPCEMAC<br><br>
+                        </b>
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+
+
+
+
         </div>
       </div>
     </div>
   </div>
-
-
 
   <div class="services" id="services">
     <div class="container">
@@ -577,7 +653,6 @@
     </div>
   </div>
 
-  <!-- Footer Starts Here -->
   <footer>
     <div class="container">
       <div class="row">
@@ -611,35 +686,37 @@
           </ul>
         </div>
         <div class="col-md-4 footer-item last-item" id="our_circle">
-          <h4>Our Circle</h4>
+          <h4 style="text-align: center;">Our Circle</h4>
           <div class="main_card">
-            <div class="background blob" style="size: 100%;"></div>
+            <div class="background blob1" style="size: 100%;"></div>
+            <div class="background blob2" style="size: 100%;"></div>
             <div class="cool_card_logo">
               <p align="center">NEPSEMYAK GROUP</p>
             </div>
             <div class="box box1">
-              <a href="https://nepsemyak.com.np"><span class="icon" style="position:absolute;
+              <a href="https://nepsemyak.com.np" target="_blank"><span class="icon" style="position:absolute;
             margin-left:-100px;z-index:20;"> Nepsemyak Sewa </span>
-              <img src="assets/images/LOGOS/nepsemyak.png"
-                style="height: 40px;width: auto;position: absolute;margin-left: -150px;margin-top: -5px;"></a>
+                <img src="assets/images/LOGOS/nepsemyak.png"
+                  style="height: 50px;width: auto;position: absolute;margin-left: -180px;margin-top: -7px;"></a>
             </div>
             <div class="box box2">
-              <a href="https://www.facebook.com/pariwartan.sewa"><span class="icon" style="position:absolute;
+              <a href="https://www.facebook.com/pariwartan.sewa" target="_blank"><span class="icon" style="position:absolute;
             margin-left:-90px;z-index:20;"> Pariwartan Sewa </span>
-              <img src="assets/images/LOGOS/pariwartan_black.png"
-                style="height: 40px;width: auto;position: absolute;margin-left: -140px;margin-top: -5px;"></a>
+                <img src="assets/images/LOGOS/pariwartan_black.png"
+                  style="height: 50px;width: auto;position: absolute;margin-left: -170px;margin-top: -7px;"></a>
             </div>
             <div class="box box3">
-              <a href="https://www.facebook.com/friends/suggestions/?profile_id=100025109945110"><span class="icon" style="position:absolute;
+              <a href="https://www.facebook.com/friends/suggestions/?profile_id=100025109945110" target="_blank"><span
+                  class="icon" style="position:absolute;
             margin-left:-50px;z-index:20;"> Green City </span>
-              <img src="assets/images/LOGOS/green_city_green.png"
-                style="height: 40px;width: auto;position: absolute;margin-left: -100px;margin-top: -5px;"></a>
+                <img src="assets/images/LOGOS/green_city_green.png"
+                  style="height: 50px;width: auto;position: absolute;margin-left: -130px;margin-top: -7px;"></a>
             </div>
             <div class="box box4">
-              <a href="javascript:void(null)"><span class="icon" style="position:absolute;
-            margin-left:-60px;z-index:20;"> Swastha Samaj</span>
-              <img src="assets/images/LOGOS/swastha_samaj_colored.png"
-                style="height: 50px;width: auto;position: absolute;margin-left: -55px;margin-top: -5px;opacity: 0.2;"></a>
+              <a href="javascript:void(null)" target="_blank"><span class="icon" style="position:absolute;
+            margin-left:-70px;z-index:20;"> Swastha Samaj</span>
+                <img src="assets/images/LOGOS/swastha_samaj_colored.png"
+                  style="height: 48px;width: auto;position: absolute;margin-left: -130px;margin-top: -5px;opacity: 1;"></a>
             </div>
           </div>
         </div>
